--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "reja",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "kamil",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "moment": "^2.30.1",
     "nodemon": "^3.1.10"
