--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "moment": "^2.30.1",
-    "mongodb": "^3.2.6",
+    "mongodb": "^3.6.2",
     "nodemon": "^3.1.10"
+  },
+  "devDependencies": {
+    "@types/mongodb": "^4.0.6"
   }
 }
